View index products: OK

--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -2,9 +2,10 @@
 <section>
     {{#each products}}
         <div>
-            <h2>{{products.title}}</h2>
-            <p>{{products.description}}</p>
-            <span>{{products.price}}</span>
+            <h2>{{title}}</h2>
+            <p>{{description}}</p>
+            <span>{{price}}</span>
+            <p>{{stock}}</p>
         </div>
     {{/each}}
 </section>
