--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,11 +3,11 @@
     <div>
         <form action="http://localhost:8080/api/auth/login" method="post">
             <div class="login-item">
-                <label for="email">Email</label>
+                <label class="label-email" for="email">Email</label>
                 <input class="input-email" type="email" name="email" placeholder="JohnDoe@gmail.com">
             </div>
             <div class="login-item">
-                <label for="password">Password</label>
+                <label class="label-password" for="password">Password</label>
                 <input class="input-password" type="password" name="password" placeholder="Password">
             </div>
             <div class="button-container">
