--- a/src/views/forbidden.handlebars
+++ b/src/views/forbidden.handlebars
@@ -9,6 +9,7 @@
         <img class="home-icon" src="./assets//home-icon.svg"
             alt="home icon">Inicio
     </a>
+    <a href=""></a>
 </section>
 
 <link rel="stylesheet" href="./css/error.module.css">
