--- a/public/css/register.module.css
+++ b/public/css/register.module.css
@@ -1,76 +1,92 @@
-.register-conteiner{
+.register-container{
+    color: white;
+    height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 2rem;
 }
 
-.register-form{
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50rem;
-    height: 45rem;
-    margin-top: 10rem;
-    background-color:  #888484;
+.register-title{
+    padding-bottom: 10rem;
 }
 
-.email, .password, .first_name, .last_name, .age{
+.item-container{
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.first_name, .last_name{
+    align-items: center;
+    justify-content: center;
     display: flex;
     flex-direction: column;
-    padding-bottom: 3rem;
 }
 
-.input-email, .input-password, .input-first_name, .input-last_name, .input-age{
-    border-radius: 5px;
-    width: 12rem;
-    height: 2rem;
-    margin-top: .9rem;
-    background-color: #888484;
-    border: 1px solid #888484;
-    border-bottom: 1px solid rgb(84, 201, 84);
+
+.age, .email, .password{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.input-email::placeholder, .input-email:focus{
+.label-password, .label-email, .label-first_name, .label-age, .label-last_name{
+    margin-top: 10px;
+    padding-left: 2rem;
+}
+
+.label-last_name, .label-first_name{
+    padding-right: 50px;
+}
+
+.input-first_name, .input-last_name{
+    text-indent: 20px;
+    margin-right: 10px;
+    margin-top: 5px;
+    width: 350px;
+    height: 50px;
+    border-radius: 15px;
+    border: 1px solid white;
+}
+
+.input-password, .input-email, .input-age{
+    text-indent: 20px;
+    margin-top: 5px;
+    width: 700px;
+    height: 50px;
+    border-radius: 15px;
+    border: 1px solid white;
+}
+
+.input-password::placeholder, .input-email::placeholder, .input-age::placeholder, .input-first_name::placeholder, .input-last_name::placeholder{
     color: #1e1e1e;
-    text-indent: 1rem;
+    text-indent: 20px;
+    font-size: 1rem;
 }
 
-.input-first_name::placeholder, .input-first_name:focus{
-    color: #1e1e1e;
-    text-indent: 1rem;
+.input-email:focus, .input-password:focus, .input-age:focus, .input-first_name:focus, .input-last_name:focus{
+    outline: none;
+    text-indent: 20px;
+
 }
 
-.input-last_name::placeholder, .input-last_name:focus{
-    color: #1e1e1e;
-    text-indent: 1rem;
+.button-container{
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.input-age::placeholder, .input-age:focus{
-    color: #1e1e1e;
-    text-indent: 1rem;
+.register-button{
+    text-align: center;
+    margin-top: 2rem;
+    width: 200px;
+    height: 50px;
+    background-color: #A0C7AB;
+    border: 1px solid #A0C7AB;
+    text-decoration: none;
+    font-size: 1.2rem;
 }
-
-.input-password::placeholder, .input-password:focus{
-    color: #1e1e1e;
-    text-indent: 1rem;
-}
-
-.register-buttom{
-    border-radius: 10px;
-    width: 7rem;
-    height: 2rem;
-    margin-bottom: 1rem;
-    background-color: aliceblue;
-    border: 1px solid rgb(84, 201, 84);
-}
-
-
-.register-buttom:hover{
-    background-color: rgb(84, 201, 84);
-    width: 7.2rem;
-    height: 2.2rem;
-}
-
