--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,29 +1,34 @@
-<section class="register-conteiner">
+<section class="register-container">
+    <h1 class="register-title">Register User</h1>
     <div class="register-form">
-        <form action="http://localhost:8080/api/auth/register" method="post">
-            <div class="first_name">
-                <label for="password">First Name</label>
-                <input class="input-first_name" type="text" name="first_name" placeholder="John">
-            </div>
-            <div class="last_name">
-                <label for="password">Last Name</label>
-                <input class="input-last_name" type="text" name="last_name" placeholder="Doe">
+        <form>
+            <div class="item-container">
+                <div class="first_name">
+                    <label class="label-first_name" for="first_name">First Name</label>
+                    <input class="input-first_name" type="text" name="first_name" placeholder="John">
+                </div>
+                <div class="last_name">
+                    <label class="label-last_name" for="last_name">Last Name</label>
+                    <input class="input-last_name" type="text" name="last_name" placeholder="Doe">
+                </div>
             </div>
             <div class="age">
-                <label for="password">Age</label>
+                <label class="label-age" for="age">Age</label>
                 <input class="input-age" type="number" name="age" placeholder="25">
             </div>
             <div class="email">
-                <label for="email">Email</label>
-                <input class="input-email" type="email" name="email" placeholder="johndoe@email.com">
+                <label class="label-email" for="email">Email</label>
+                <input class="input-email" type="email" name="email" placeholder="Johndoe@email.com">
             </div>
             <div class="password">
-                <label for="password">Password</label>
-                <input class="input-password" type="password" name="password" placeholder="password">
+                <label class="label-password" for="password">Password</label>
+                <input class="input-password" type="password" name="password" placeholder="assword">
             </div>
-            <button class="register-buttom" type="submit">
-                Register
-            </button>
+            <div class="button-container">
+                <button class="register-button" type="submit">
+                    Register
+                </button>
+            </div>
         </form>
     </div>
 </section>
