--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,7 +2,7 @@
     <div class="product-form">
 
         <h1 class="product-title">Create Product</h1>
-        <form action="http://localhost:8080/api/products/create" method="POST">
+        <form action="/api/products/create" method="POST">
             <div class="item-container">
                 <div class="title">
                     <label class="label-title" for="title">Title</label>
