--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,21 +19,21 @@
                 </div>
                 <ul>
                     <div class="item-container">
-                        <li><a class="home" href="/">Inicio</a></li>
-                        <li><a class="cart" href="/cart">Carrito</a></li>
+                        <li><a class="home" href="/">Home</a></li>
+                        <li><a class="cart" href="/cart">Cart</a></li>
                         <div>
                             <div class="dropdown">
-                                <p>Edit Users</p>
+                                <p class="dropdown-title">Edit Users</p>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/api/users">Change Role</a>
-                                    <a class="dropdown-item" href="/api/users">Delete User</a>
-                                    <a class="dropdown-item" href="/api/users">Change Password</a>
+                                    <a class="dropdown-item" href="/">Change Role</a>
+                                    <a class="dropdown-item" href="/">Delete User</a>
+                                    <a class="dropdown-item" href="/">Change Password</a>
                                 </div>
                             </div>
                         </div>
                         <div>
                             <div class="dropdown">
-                                <p>Edit Products</p>
+                                <p class="dropdown-title">Edit Products</p>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="/create">Create</a>
                                     <a class="dropdown-item" href="/update">Update</a>
@@ -43,9 +43,9 @@
                         </div>
                     </div>
                     <div class="item-container-sesion">
-                        <li><a class="login" href="login">Iniciar Sesion</a></li>
+                        <li><a class="login" href="login">Login</a></li>
                         <div class="container">
-                            <li><a class="register" href="register">Registrarse</a></li>
+                            <li><a class="register" href="register">Register</a></li>
                         </div>
                     </div>
                 </ul>
