--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,9 +41,12 @@ li{
 .home, .login, .register, .cart, .users, .products{
     text-decoration: none;
     color: black;
+    font-size: 1.2rem;
 }
 
-
+.dropdown-title{
+    font-size: 1.2rem;
+}
 
 .item-container,
 .item-container-sesion {
@@ -97,6 +100,7 @@ li{
     color: #333;
     text-decoration: none;
     display: block;
+    font-size: 1.2rem;
 }
 
 .dropdown-item:hover {
