Add router helper and class

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <section class="login-container">
     <h1 class="login-title">Login</h1>
     <div>
-        <form action="http://localhost:8080/api/auth/login" method="post">
+        <form class="form-login">
             <div class="login-item">
                 <label class="label-email" for="email">Email</label>
                 <input class="input-email" type="email" name="email" placeholder="JohnDoe@gmail.com">
@@ -19,3 +19,4 @@
 </section>
 
 <link rel="stylesheet" href="./css/login.module.css">
+<script defer src="./js/login.js"></script>
